--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -1,3 +1,23 @@
-.nav-link {
-    white-space: nowrap;
+.search {
+    width: 30vw;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.search-dropdown {
+    border-radius: 5px;
+    background-color: transparent;
+}
+
+#search-button {
+    border-radius: 5px;
+    background-color: #2596be;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: white;
+}
+
+.login {
+    width: 10vw;
+    margin-left: 10px;
 }
