--- a/client/src/components/Stream/style.css
+++ b/client/src/components/Stream/style.css
@@ -1,6 +1,7 @@
 .logo-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .provider-logo{
     margin: 5px;
