--- a/client/src/components/RelatedModal/style.css
+++ b/client/src/components/RelatedModal/style.css
@@ -7,15 +7,51 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.8);
-    z-index: 2;
-    cursor: pointer;
 }
 
-.modal-info{
-    background-color: aliceblue;
-    width: 70%;
+.center-modal{
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
+.modal-info{
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: aliceblue;
+    width: 70%;
+    padding: 30px;
+    flex-direction: column;
+}
+
+.image-container{
+    display: flex;
+    justify-content: center;
+}
+
+.modal-image{
+    width: 20vw;
+    height:100%
+}
+
+.status{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.close-btn{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.close-btn-text{
+    border: none;
+    background-color: transparent;
+    color: rgb(100, 110, 255);
+}
+
+.close-btn-text:hover{
+    text-decoration: underline;
 }
