--- a/client/src/components/Similar/style.css
+++ b/client/src/components/Similar/style.css
@@ -4,9 +4,10 @@ margin: 10px 10px 0px 0px;
 }
 
 .similar-image {
-  max-width: 18vw;
+  max-width: 18vh;
   max-height: auto;
-  border: 5px solid black;
+  margin: 8px;
+  border: 4px solid orchid;
   border-radius: 15px;
 }
 
