--- a/client/src/components/RelatedModal/style.css
+++ b/client/src/components/RelatedModal/style.css
@@ -18,7 +18,8 @@
 .modal-info {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: aliceblue;
+    background: rgb(55,55,55);
+    background: radial-gradient(circle, rgba(55,55,55,1) 0%, rgba(0,0,0,1) 100%);
     width: 70%;
     padding: 30px;
     flex-direction: column;
@@ -30,8 +31,10 @@
 }
 
 .modal-image {
-    width: 20vw;
-    height: 100%;
+    width: 25vw;
+    height: auto;
+    border: 3px solid ghostwhite;
+    border-radius: 15px;
 }
 
 .status {
@@ -54,4 +57,8 @@
 
 .close-btn-text:hover {
     text-decoration: underline;
+}
+
+.modal-description {
+  color: ghostwhite;  
 }
