--- a/client/src/components/Stream/style.css
+++ b/client/src/components/Stream/style.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 .logo-container p {
     font-size: 0.8rem;
@@ -11,4 +13,5 @@
     margin: 5px;
     width: 50px;
     border-radius: 10px;
+    border: 1px solid whitesmoke;
 }
