--- a/client/src/components/RelatedModal/style.css
+++ b/client/src/components/RelatedModal/style.css
@@ -16,6 +16,7 @@
 }
 
 .modal-info {
+    border: 2px solid ghostwhite;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     background: rgb(55,55,55);
