--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,8 +23,11 @@ a {
 }
 
 .special-link {
+    font-size: 1.5rem;
     color: ghostwhite;  
     transform: skew(5deg);
+    display: flex;
+    justify-content: center;
 }
 
 .special-link:hover {
@@ -46,7 +49,7 @@ a {
 }
 
 .image {
-    width: auto;
+    width: 18vw;
     height: 100%;
     margin: 10px;
     border-top: 6px solid ghostwhite;
@@ -132,6 +135,7 @@ section {
 }
 
 .container-user {
+    color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -147,14 +151,36 @@ section {
     padding-bottom: 20px;
 }
 
+.login-text{
+    font-family: 'Poppins', sans-serif;
+}
+
+.login-text:hover{
+    text-shadow: none;
+    color: black;
+    text-decoration: none;
+}
+
+.special-link-small{
+    font-size: 1rem;
+    color: white;
+    text-decoration: underline;
+}
+
 .form-group {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     margin: 2px;
 }
 
 .form-group label {
     margin-right: 5px;
+}
+
+.error{
+    font-size: 0.8rem;
+    color: red;
 }
 
 .submit-button {
@@ -189,12 +215,13 @@ section {
 .modal-header {
     padding: 2px 16px;
     background-color: #ec1616;
-    color: white;
+    color: black;
 }
 
 /* Modal Body */
 .modal-body {
     padding: 2px 16px;
+    color: black;
 }
 
 /* The Modal (background) */
@@ -273,7 +300,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 @media screen and (min-width: 1200px) {
@@ -282,16 +309,27 @@ section {
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
-        justify-content: space-around;
+        justify-content: center;
     }
 }
 
-@media screen and (max-width: 1200px) and (min-width: 800px) {
+@media screen  and (max-width: 1200px) {
     #big-shell{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         align-items: flex-start;
-        justify-content: space-around;
+        justify-content: center;
+    }
+}
+
+@media screen and  (min-width: 992px){
+    #big-shell{
+        min-width: 30%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: center;
     }
 }
