--- a/client/src/components/UserList/style.css
+++ b/client/src/components/UserList/style.css
@@ -1,35 +1,47 @@
 .results-container {
-    background-color: lightgray;
-    padding: 20px;
-    border-radius: 10px;
-    width: 47%;
-    max-width: 500px;
-    margin: 20px;
+    background: rgb(55,55,55);
+    background: radial-gradient(circle, rgba(55,55,55,1) 0%, rgba(0,0,0,1) 100%);       
+    margin: 7px 10px 7px 10px;
+    border: 2px solid ghostwhite;
+    border-radius: 15px;
+    width: 95%;
 }
 
 .card-info {
     display: flex;
     flex-direction: column;
     width: 100%;
-    justify-content: center;
 }
 
-.card-img-date-desc {
+.card-img-date-desc{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
 }
+
 .card-image {
     width: auto;
-    height: 100%;
-    max-height: 27vh;
+    height: 30vh;
+    margin: 10px;
+    border-top: 3px solid ghostwhite;
+    border-right: 1px solid ghostwhite;
+    border-bottom: 1px solid ghostwhite;
+    border-left: 3px solid ghostwhite;
+    border-radius: 15px;
 }
 
 .title-date {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .card-title {
+    display: flex;
+    flex-direction: column;
     margin-bottom: 0;
     margin-left: 20px;
     font-size: 1.3rem;
@@ -40,41 +52,47 @@
 }
 
 .description {
-    margin-left: 20px;
-    width: 90%;
+    margin: 10px 30px 10px 30px;
+    font-size: 1.5vh;
 }
 
-.stream {
-    margin-left: 20px;
-    margin-top: 10px;
+.stream{
+    margin: 5px;
 }
 
-.stream p {
-    margin-bottom: 0;
+.availability{
+    text-align: center;
     font-weight: bold;
-    font-size: 0.9rem;
     font-style: italic;
 }
 
 .myRating {
     display: flex;
-    margin-top: 10px;
-    width: 100%;
     justify-content: center;
+    margin: 10px;   
 }
 
-.card-title {
-    text-align: center;
+@media screen and (min-width: 1200px) {
+    .results-container {
+        width: 30%;
+    }
 }
 
-.changeStatusUser {
-    width: 80%;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
+
+@media screen and (max-width: 1200px) and (min-width: 800px) {
+    .results-container {
+        width: 45%;
+    }
+
+    .card-image {
+        width: 20vh;
+        height: auto;
+    }
 }
+
+
 
 .dropDownUser {
     display: flex;
     justify-content: center;
-}
+} 
