--- a/client/src/components/TVCard/style.css
+++ b/client/src/components/TVCard/style.css
@@ -1,9 +1,10 @@
 .results-container {
-    background-color: lightgray;
-    padding: 20px;
-    border-radius: 10px;
-    width: 47%;
-    margin: 20px;
+    background: rgb(55,55,55);
+    background: radial-gradient(circle, rgba(55,55,55,1) 0%, rgba(0,0,0,1) 100%);       
+    margin: 7px 10px 7px 10px;
+    border: 2px solid ghostwhite;
+    border-radius: 15px;
+    width: 95%;
 }
 
 .card-info {
@@ -16,10 +17,16 @@
     display: flex;
     width: 100%;
 }
+
 .card-image {
     width: auto;
-    height: 100%;
-    max-height: 27vh;
+    height: 30vh;
+    margin: 10px;
+    border-top: 3px solid ghostwhite;
+    border-right: 1px solid ghostwhite;
+    border-bottom: 1px solid ghostwhite;
+    border-left: 3px solid ghostwhite;
+    border-radius: 15px;
 }
 
 .title-date {
@@ -30,9 +37,10 @@
 .card-title {
     margin-bottom: 0;
     margin-left: 20px;
-    font-size: 1.3rem;
+    font-size: 1.3rem; 
     font-weight: bold;
 }
+
 .date {
     margin-left: 10px;
 }
@@ -43,8 +51,7 @@
 }
 
 .stream{
-    margin-left: 20px;
-    margin-top: 10px;
+    margin: 5px;
 }
 
 .availability{
