--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,12 @@
 body {
+  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  background: rgb(121,121,121);
+  background: linear-gradient(180deg, rgba(121,121,121,1) 0%, rgba(0,0,0,1) 100%);
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  color: whitesmoke;
+} 
