--- a/client/src/components/MovieCard/style.css
+++ b/client/src/components/MovieCard/style.css
@@ -5,6 +5,7 @@
     border: 2px solid ghostwhite;
     border-radius: 15px;
     width: 95%;
+    max-width: 380px;
 }
 
 .card-info {
@@ -52,7 +53,7 @@
 }
 
 .description {
-    margin: 10px 30px 10px 30px;
+    margin-left: 20px;
     font-size: 1.5vh;
 }
 
